--- a/app/src/main/res/layout/layout_notification_list_admin.xml
+++ b/app/src/main/res/layout/layout_notification_list_admin.xml
@@ -7,6 +7,7 @@
     android:layout_marginTop="12dp"
     android:layout_marginRight="16dp"
     android:clickable="true"
+    android:theme="@style/Theme.Admin"
     android:foreground="?selectableItemBackground"
     android:visibility="visible"
     card_view:cardBackgroundColor="#FFFF"
@@ -56,6 +57,7 @@
                 android:layout_below="@+id/notificationDescriptionView"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
+                android:background="@drawable/admin_button"
                 android:text="Edit" />
 
             <Button
