--- a/app/src/main/res/layout/user_fragment_notification.xml
+++ b/app/src/main/res/layout/user_fragment_notification.xml
@@ -5,6 +5,7 @@
     android:id="@+id/user_fragment_notification"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.User"
     tools:context=".UserFragment.UserNotificationFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
