--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,23 @@
     <style name="Base.Theme.Assignment" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/black</item>
+
+        <item name="colorSecondary">@color/blue</item>
+
+        <item name="colorTertiary">@color/orange</item>
     </style>
+
+    <!-- Theme for the User Fragment -->
+    <style name="Theme.User" parent="Base.Theme.Assignment">
+        <item name="colorPrimary">@color/orange</item> <!-- User fragment uses the primary color (orange) -->
+    </style>
+
+    <!-- Theme for the Admin Fragment -->
+    <style name="Theme.Admin" parent="Base.Theme.Assignment">
+        <item name="colorPrimary">@color/blue</item> <!-- Admin fragment uses the primary color (blue) -->
+    </style>
+
 
     <style name="Theme.Assignment" parent="Base.Theme.Assignment" />
 </resources>
