--- a/app/src/main/res/layout/layout_feedback_list.xml
+++ b/app/src/main/res/layout/layout_feedback_list.xml
@@ -2,20 +2,21 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="96dp"
-    android:layout_marginTop="12dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
+    android:layout_marginTop="12dp"
     android:layout_marginRight="16dp"
+    android:clickable="true"
+    android:foreground="?selectableItemBackground"
     android:theme="@style/Theme.Admin"
     card_view:cardBackgroundColor="#FFFF"
     card_view:cardCornerRadius="8dp"
-    card_view:contentPadding="10dp"
-    android:foreground="?selectableItemBackground"
-    android:clickable="true">
+    card_view:contentPadding="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,15 +27,28 @@
                 android:id="@+id/feedbackGmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="Gmail"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/feedbackText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="Feedback"
                 android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/admin_delete_feedback"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete" />
+
+            <TextView
+                android:id="@+id/feedbackId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FeedbackId"
+                android:visibility="gone" />
 
 
         </LinearLayout>
