--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -15,6 +15,11 @@
             app:destination="@id/navigation"
             app:popUpTo="@id/navigation"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_adminHomeFragment_to_adminLoginActivity2"
+            app:destination="@id/adminLoginActivity"
+            app:popUpTo="@id/adminLoginActivity"
+            app:popUpToInclusive="true" />
     </fragment>
     <activity
         android:id="@+id/adminLoginActivity"
@@ -59,4 +64,53 @@
             android:id="@+id/action_adminManageUserFragment_to_adminLoginActivity"
             app:destination="@id/adminLoginActivity" />
     </fragment>
+    <fragment
+        android:id="@+id/userActivityFragment"
+        android:name="com.example.assignment.UserFragment.UserActivityFragment"
+        android:label="user_fragment_activity"
+        tools:layout="@layout/user_fragment_activity" >
+        <action
+            android:id="@+id/action_userActivityFragment_to_userLoginActivity"
+            app:destination="@id/userLoginActivity"
+            app:popUpTo="@id/userLoginActivity"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/userHomeFragment"
+        android:name="com.example.assignment.UserFragment.UserHomeFragment"
+        android:label="user_fragment_home"
+        tools:layout="@layout/user_fragment_home" >
+        <action
+            android:id="@+id/action_userHomeFragment_to_userLoginActivity"
+            app:destination="@id/userLoginActivity"
+            app:popUpTo="@id/userLoginActivity"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/userNotificationFragment"
+        android:name="com.example.assignment.UserFragment.UserNotificationFragment"
+        android:label="user_fragment_notification"
+        tools:layout="@layout/user_fragment_notification" >
+        <action
+            android:id="@+id/action_userNotificationFragment_to_userLoginActivity"
+            app:destination="@id/userLoginActivity"
+            app:popUpTo="@id/userLoginActivity"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="com.example.assignment.UserFragment.UserProfileFragment"
+        android:label="user_fragment_profile"
+        tools:layout="@layout/user_fragment_profile" >
+        <action
+            android:id="@+id/action_userProfileFragment_to_userLoginActivity"
+            app:destination="@id/userLoginActivity"
+            app:popUpTo="@id/userLoginActivity"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <activity
+        android:id="@+id/userLoginActivity"
+        android:name="com.example.assignment.UserLoginActivity"
+        android:label="user_activity_login"
+        tools:layout="@layout/user_activity_login" />
 </navigation>
