--- a/app/src/main/res/layout/user_fragment_home_activity_view.xml
+++ b/app/src/main/res/layout/user_fragment_home_activity_view.xml
@@ -15,11 +15,11 @@
             android:id="@+id/user_home_activityView_image"
             android:layout_width="328dp"
             android:layout_height="285dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:src="?android:attr/galleryItemBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/donationDetailsTitleLable" />
 
         <TextView
             android:id="@+id/userActivityDonateNameText"
@@ -93,5 +93,27 @@
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/user_home_donation_deatils_backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/baseline_arrow_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/donationDetailsTitleLable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/donationDetailsTitle"
+            android:textSize="@dimen/titleTextSize"
+            app:layout_constraintStart_toEndOf="@+id/user_home_donation_deatils_backButton"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
