--- a/app/src/main/res/layout/user_fragment_notification.xml
+++ b/app/src/main/res/layout/user_fragment_notification.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UserNotification"
+            android:text="@string/userNotificationLabel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
