--- a/app/src/main/res/layout/admin_fragment_feedback.xml
+++ b/app/src/main/res/layout/admin_fragment_feedback.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Notification and Feedback"
+            android:textSize="@dimen/titleTextSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
