--- a/app/src/main/res/layout/layout_notification_list_admin.xml
+++ b/app/src/main/res/layout/layout_notification_list_admin.xml
@@ -16,13 +16,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" >
 
 
         <LinearLayout
+            android:id="@+id/admin_notification_firstLayer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="#97A4F3"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/notificationIdView"
@@ -34,27 +36,54 @@
                 android:visibility="gone" />
 
             <TextView
-                android:id="@+id/notificationTitleView"
-                android:layout_width="wrap_content"
+                android:id="@+id/admin_notificationTitleView"
+                android:layout_width="273dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="TextView"
-                android:textSize="20sp" />
-
+                android:text="Title"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:visibility="visible" />
 
             <TextView
-                android:id="@+id/notificationDescriptionView"
+                android:id="@+id/admin_notificationDateView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Date"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/admin_notification_secondLayer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/admin_notification_firstLayer"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/admin_notificationDescriptionView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="TextView"
+                android:text="Description"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/admin_notification_secondLayer">
 
             <Button
                 android:id="@+id/editNotificationButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/notificationDescriptionView"
+                android:layout_below="@+id/admin_notificationDescriptionView"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
                 android:text="Edit" />
@@ -63,13 +92,11 @@
                 android:id="@+id/deleteNotificationButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/notificationDescriptionView"
+                android:layout_below="@+id/admin_notificationDescriptionView"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
                 android:text="Delete" />
-
         </LinearLayout>
-
 
     </RelativeLayout>
 
