--- a/app/src/main/res/layout/layout_notification_list_user.xml
+++ b/app/src/main/res/layout/layout_notification_list_user.xml
@@ -19,9 +19,11 @@
 
 
         <LinearLayout
+            android:id="@+id/layout_notification_list_firstLayer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="#FFC107"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/notificationIdView"
@@ -33,25 +35,45 @@
                 android:visibility="gone" />
 
             <TextView
-                android:id="@+id/notificationTitleView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/admin_notificationTitleView"
+                android:layout_width="257dp"
+                android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
-                android:text="TextView"
-                android:textSize="16sp" />
+                android:text="Title"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/user_notificationDateView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="Date"
+                android:textColor="#FFFFFF" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_notification_list_firstLayer"
+            android:background="@color/white"
+            android:orientation="vertical">
 
 
             <TextView
-                android:id="@+id/notificationDescriptionView"
+                android:id="@+id/admin_notificationDescriptionView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="TextView"
+                android:text="Description"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
-
     </RelativeLayout>
+
 
 </androidx.cardview.widget.CardView>
