--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="buttonRadius">16dp</dimen>
     <dimen name="titleTextSize">25sp</dimen>
+    <dimen name="smallTitle">20sp</dimen>
 </resources>
