--- a/app/src/main/res/layout/user_fragment_notification.xml
+++ b/app/src/main/res/layout/user_fragment_notification.xml
@@ -62,7 +62,7 @@
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            android:src="@drawable/icon_profile" />
 
         <ImageView
             android:id="@+id/imageView3"
