--- a/app/src/main/res/layout/admin_fragment_notification_view.xml
+++ b/app/src/main/res/layout/admin_fragment_notification_view.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:theme="@style/Theme.Admin"
     tools:context=".AdminFragment.AdminNotificationViewFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView8"
@@ -20,16 +20,6 @@
             android:textSize="@dimen/titleTextSize"
             app:layout_constraintStart_toEndOf="@+id/admin_notification_view_backButton"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/adminNotificationRecycler"
-            android:layout_width="409dp"
-            android:layout_height="710dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            tools:listitem="@layout/layout_notification_list_admin" />
 
         <ImageView
             android:id="@+id/admin_notification_view_backButton"
@@ -50,6 +40,18 @@
             android:src="@drawable/admin_notification_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/adminNotificationRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="80dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/layout_notification_list_admin" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
