--- a/app/src/main/res/layout/admin_fragment_feedback_view.xml
+++ b/app/src/main/res/layout/admin_fragment_feedback_view.xml
@@ -28,6 +28,8 @@
             android:layout_height="match_parent"
 
             android:layout_marginTop="70dp"
+            android:layout_marginBottom="80dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6"
