--- a/app/src/main/res/layout/layout_donation_dialog.xml
+++ b/app/src/main/res/layout/layout_donation_dialog.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:theme="@style/Theme.User"
     android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/user_donateDialog_closeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        app:srcCompat="@drawable/close_icon" />
 
     <RadioGroup
         android:id="@+id/donationRadioGroup"
@@ -31,6 +39,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="300" />
+
+        <RadioButton
+            android:id="@+id/radioOption4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="400" />
+
+        <RadioButton
+            android:id="@+id/radioOption5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="500" />
 
         <!-- Add more options as needed -->
 
